# scalable-data-harvesting-for-ai-may2026

./: .gitignore  README.md  pyproject.toml
docs/: selector_reference.md
solutions/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
solutions/books_scraper/: books.csv
solutions/books_scraper/books_scraper/: items.py  middlewares.py  pipelines.py  settings.py
solutions/books_scraper/books_scraper/spiders/: books.py  pagination_spider.py  worker.py
solutions/quotescraper/quotescraper/: settings.py
solutions/quotescraper/quotescraper/spiders/: quotes_js.py  quotes_to_scrape.py
workshop/: README.md  pyproject.toml
