[project]
name = "scalable-data-harvesting-for-ai-may2026"
version = "0.1.0"
description = "An introduction to scalable, high-throughput webscraping methods for provision of large training data."
readme = "README.md"
requires-python = ">=3.9.10"
dependencies = [
    "pre-commit>=4.3.0",
    "scrapy-playwright>=0.0.44",
]

[tool.uv.workspace]
members = [
    "solutions",
    "workshop",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]
