[project]
name = "solutions"
version = "0.1.0"
description = "Workshop solutions."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.3",
    "python-dotenv>=1.0.1",
    "scrapy>=2.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = ["main.py"]
packages = ["books_scraper/books_scraper"]

[project.scripts]
crawl = "main:main"
