[project]
name = "solutions"
version = "0.1.0"
description = "Workshop solutions."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.3",
    "scrapy>=2.11.2",
    "scrapy-redis>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = ["main.py"]
packages = ["books_scraper/books_scraper"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]

[project.scripts]
crawl = "main:main"
